<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_right">Right</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="move_left">Left</string>
    <string name="move_up">Up</string>
    <string name="move_down">Down</string>
    <string name="reset">Reset</string>
    <string name="continueLabel">Continue</string>
    <string name="continueButton">continue</string>
    <string name="pause">Pause</string>
    <string name="timer_value">Timer value:</string>
    <string name="timer">Timer</string>
    <string name="nextLevel">Next Level</string>
</resources>
